Fixed logo not showing up

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -55,3 +55,7 @@ nav a:link, nav a:visited {
 nav a:hover {
     color: var(--nav-hover-link-color);
 }
+
+#logo {
+    background-color: var(--nav-background-color);
+}
